--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ static/jquery*
 static/bootstrap*
 static/images/head
 static/images/forehead
+static/images/eye
+static/images/antenna
+static/images/wing
+static/images/knees
+static/images/stinger
+static/images/portrait
+
